llvm/build/tools/clang/test/CXX/class/class.mem/Output/p1b.cpp.tmp
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:15:17: error: use of default argument to function 'B' that is declared later in class 'B'
  void a2(B b = B()); // expected-error{{use of default argument to function 'B' that is declared later in class 'B'}}
                ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:24:15: note: default argument declared here
    B(int b = 42) { // expected-note{{default argument declared here}}
              ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:20:19: error: use of undeclared identifier 'first'
  void a4(int a = first); // expected-error{{use of undeclared identifier 'first'}}
                  ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:30:19: error: use of default argument to function 'A' that is declared later in class 'A'
    void b1(A a = A()); // expected-error{{use of default argument to function 'A' that is declared later in class 'A'}}
                  ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:42:13: note: default argument declared here
  A(int a = 42); // expected-note{{default argument declared here}}
            ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:33:21: error: use of undeclared identifier 'second'
    void b2(int a = second); // expected-error{{use of undeclared identifier 'second'}}
                    ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/CXX/class/class.mem/p1b.cpp:45:19: error: use of undeclared identifier 'third'
  void a7(int a = third); // expected-error{{use of undeclared identifier 'third'}}
                  ^
5 errors generated.
